--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -125,7 +125,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-warning" data-dismiss="modal">
+          <button type="button" id="closeModal" class="btn btn-warning" data-dismiss="modal">
             Cancel
           </button>
           <button  type="submit" [disabled]="serverForm.invalid || (isLoading$ | async)" class="btn btn-success">
